@@ -71,3 +71,4 @@ ChangeLog
 		Fixed position of experiment buttons in 'Here and Now' window when MinScience slider hidden.
 		Fixed experiments not being re-classified as incomplete (or completed) when switching between regular and VeryLowMinScience if MinScience slider hidden.
 		Fixed text spanning outside of buttons and/or progress bars in some cases.
+		Added the Recoverd+OnBoard science value to be shown below experiment description on experiment buttons in the 'Here and Now' window, and tooltip describing button contents.
